commit the editor css

--- a/promissor-demo.html
+++ b/promissor-demo.html
@@ -4,6 +4,7 @@
         Prosemirror Demo
     </title>
     <link href="./style.css" rel="stylesheet">
+    <link href="./editor.css" rel="stylesheet">
 </head>
 <body>
 
